--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,12 +54,12 @@ set -s escape-time 0
 set -g mouse on
 
 # Navigation
-is_vim="tmux display-message -p '#{pane_current_command}' | grep -iq vim"
-bind -n 'C-h' run "($is_vim && tmux send-keys C-h) || tmux select-pane -L"
-bind -n 'C-j' run "($is_vim && tmux send-keys C-j) || tmux select-pane -D"
-bind -n 'C-k' run "($is_vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n 'C-l' run "($is_vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n 'C-\' run "($is_vim && tmux send-keys C-\\\\) || tmux select-pane -l"
+forward_keys="tmux display-message -p '#{pane_current_command}' | grep -Piq '(vim|fzf)'"
+bind -n 'C-h' run "($forward_keys && tmux send-keys C-h) || tmux select-pane -L"
+bind -n 'C-j' run "($forward_keys && tmux send-keys C-j) || tmux select-pane -D"
+bind -n 'C-k' run "($forward_keys && tmux send-keys C-k) || tmux select-pane -U"
+bind -n 'C-l' run "($forward_keys && tmux send-keys C-l) || tmux select-pane -R"
+bind -n 'C-\' run "($forward_keys && tmux send-keys C-\\\\) || tmux select-pane -l"
 
 ######################
 ### DESIGN CHANGES ###
