--- a/alacritty.yml
+++ b/alacritty.yml
@@ -34,7 +34,7 @@ window:
   decorations: full
 
 # When true, bold text is drawn using the bright variant of colors.
-draw_bold_text_with_bright_colors: true
+draw_bold_text_with_bright_colors: false
 
 # Font configuration (changes require restart)
 #
@@ -58,22 +58,18 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-      family: DroidSansMono Nerd Font Mono
-    # family: monospace # should be "Menlo" or something on macOS.
-    # Style can be specified to pick a specific face.
-    # style: Regular
+      family: FiraCode Nerd Font
+      style: Regular
 
   # The bold font face
   bold:
-    family: DroidSansMono Nerd Font Mono # should be "Menlo" or something on macOS.
-    # Style can be specified to pick a specific face.
-    # style: Bold
+    family: FiraCode Nerd Font Mono
+    style: Bold
 
   # The italic font face
   italic:
-    family: DroidSansMono Nerd Font Mono # should be "Menlo" or something on macOS.
-    # Style can be specified to pick a specific face.
-    # style: Italic
+    family: FiraCode Nerd Font Mono
+    style: Italic
 
   # Point size of the font
   size: 12.0
