--- a/alacritty.yml
+++ b/alacritty.yml
@@ -58,7 +58,7 @@ draw_bold_text_with_bright_colors: false
 font:
   # The normal (roman) font face to use.
   normal:
-      family: FiraCode Nerd Font
+      family: Fira Code
       style: Regular
 
   # The bold font face
