Switch to mononoki font

--- a/alacritty.yml
+++ b/alacritty.yml
@@ -58,21 +58,21 @@ draw_bold_text_with_bright_colors: false
 font:
   # The normal (roman) font face to use.
   normal:
-      family: Fira Code
+      family: mononoki
       style: Regular
 
   # The bold font face
   bold:
-    family: FiraCode Nerd Font Mono
+    family: mononoki
     style: Bold
 
   # The italic font face
   italic:
-    family: FiraCode Nerd Font Mono
+    family: mononoki
     style: Italic
 
   # Point size of the font
-  size: 12.0
+  size: 13.0
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
