Swap clock formats in waybar

--- a/waybar/config
+++ b/waybar/config
@@ -23,7 +23,8 @@
     },
     "clock": {
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d %H:%M}"
+        "format-alt": "{:%H:%M}",
+        "format": "{:%Y-%m-%d %H:%M}"
     },
     "cpu": {
         "format": "{usage}% ",
