--- a/waybar/config
+++ b/waybar/config
@@ -1,7 +1,7 @@
 {
     "layer": "bottom",
     "position": "bottom",
-    "height": 30,
+    "height": 25,
     "modules-left": ["sway/workspaces", "sway/mode", "sway/window"],
     "modules-center": [],
     "modules-right": ["idle_inhibitor", "pulseaudio", "network", "cpu", "memory", "temperature", "battery", "clock", "tray"],
@@ -57,7 +57,7 @@
         "bat": "BAT2"
     },
     "network": {
-        "interface": "wlp0*", // (Optional) To force the use of this interface
+        //"interface": "wlp0*", // (Optional) To force the use of this interface
         "format-wifi": "{essid} ({signalStrength}%) ",
         "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
         "format-linked": "{ifname} (No IP) ",
