--- a/sway/waybar/config
+++ b/sway/waybar/config
@@ -9,7 +9,7 @@
         "max-length": 50
     },
     "sway/mode": {
-        "format": "<span style=\"italic\">{}</span>"
+        "format": "{}"
     },
     "idle_inhibitor": {
         "format": "{icon}",
