--- a/sway/config
+++ b/sway/config
@@ -11,28 +11,32 @@ set $term kitty
 
 set $menu bemenu-run | xargs swaymsg exec --
 
+# Outputs
+set $primary DP-3
+set $secondary HDMI-A-1
+
 ### Output configuration
 #
-output DP-3 {
+output $primary {
     resolution 1920x1080@144Hz
     position 0 0
     background ~/pics/wallpapers/selected_main fill
 }
-output HDMI-A-1 {
+output $secondary {
     position 1920 0
     background ~/pics/wallpapers/selected_secondary fill
 }
 
 # Assign workspaces to outputs
-workspace 1 output DP-3
-workspace 2 output DP-3
-workspace 3 output DP-3
-workspace 4 output DP-3
-workspace 5 output HDMI-A-1
-workspace 6 output HDMI-A-1
-workspace 7 output HDMI-A-1
-workspace 8 output HDMI-A-1
-workspace 9 output DP-3
+workspace 1 output $primary
+workspace 2 output $primary
+workspace 3 output $primary
+workspace 4 output $primary
+workspace 5 output $secondary
+workspace 6 output $secondary
+workspace 7 output $secondary
+workspace 8 output $secondary
+workspace 9 output $primary
 
 ### Idle configuration
 #
