--- a/sway/config
+++ b/sway/config
@@ -1,17 +1,14 @@
 ### Variables
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
-# Home row direction keys, like vim
+
 set $left h
 set $down j
 set $up k
 set $right l
-# Your preferred terminal emulator
+
 set $term kitty
-# Your preferred application launcher
-# Note: pass the final command to swaymsg so that the resulting window can be opened
-# on the original workspace that the command was run on.
-#set $menu dmenu_path | dmenu | xargs swaymsg exec --
+
 set $menu bemenu-run | xargs swaymsg exec --
 
 ### Output configuration
@@ -49,6 +46,7 @@ input * xkb_options "grp:alt_caps_toggle"
 ### Sway settings
 #
 focus_follows_mouse no
+floating_modifier $mod normal
 default_border pixel 2
 smart_borders no_gaps
 smart_gaps on
@@ -65,56 +63,37 @@ client.unfocused "#333333" "#222222" "#cccccc" "#292d2e" "#222222"
 #
 # Basics:
 #
-    # Start a terminal
+    # Start terminal
     bindsym $mod+Shift+Return exec $term
 
-    # Kill focused window
+    # Kill window
     bindsym $mod+x kill
 
-    # Start your launcher
+    # Launchers
     bindsym $mod+o exec $menu
+    bindsym $mod+i exec wofi --show=drun
 
-    # Drag floating windows by holding down $mod and left mouse button.
-    # Resize them with right mouse button + $mod.
-    # Despite the name, also works for non-floating windows.
-    # Change normal to inverse to use left mouse button for resizing and right
-    # mouse button for dragging.
-    floating_modifier $mod normal
-
-    # Reload the configuration file
+    # Reload config
     bindsym $mod+Shift+Escape reload
 
-    # Exit sway (logs you out of your Wayland session)
+    # Exit sway
     bindsym $mod+Shift+q exit
 
-#
-# Moving around:
-#
-    # Move your focus around
+    # Focus windows
     bindsym $mod+$left focus left
     bindsym $mod+$down focus down
     bindsym $mod+$up focus up
     bindsym $mod+$right focus right
-    # Or use $mod+[up|down|left|right]
-    bindsym $mod+Left focus left
-    bindsym $mod+Down focus down
-    bindsym $mod+Up focus up
-    bindsym $mod+Right focus right
 
-    # Move the focused window with the same, but add Shift
+    # Move windows
     bindsym $mod+Shift+$left move left
     bindsym $mod+Shift+$down move down
     bindsym $mod+Shift+$up move up
     bindsym $mod+Shift+$right move right
-    # Ditto, with arrow keys
-    bindsym $mod+Shift+Left move left
-    bindsym $mod+Shift+Down move down
-    bindsym $mod+Shift+Up move up
-    bindsym $mod+Shift+Right move right
 #
 # Workspaces:
 #
-    # Switch to workspace
+    # Focus workspace
     bindsym $mod+1 workspace 1
     bindsym $mod+2 workspace 2
     bindsym $mod+3 workspace 3
@@ -124,7 +103,8 @@ client.unfocused "#333333" "#222222" "#cccccc" "#292d2e" "#222222"
     bindsym $mod+7 workspace 7
     bindsym $mod+8 workspace 8
     bindsym $mod+9 workspace 9
-    # Move focused container to workspace
+
+    # Move window to workspace
     bindsym $mod+Shift+1 move container to workspace 1
     bindsym $mod+Shift+2 move container to workspace 2
     bindsym $mod+Shift+3 move container to workspace 3
@@ -134,23 +114,17 @@ client.unfocused "#333333" "#222222" "#cccccc" "#292d2e" "#222222"
     bindsym $mod+Shift+7 move container to workspace 7
     bindsym $mod+Shift+8 move container to workspace 8
     bindsym $mod+Shift+9 move container to workspace 9
-    # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
 #
 # Layout stuff:
 #
-    # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
-    # respectively.
     bindsym $mod+b splith
     bindsym $mod+v splitv
 
-    # Switch the current container between different layout styles
+    # Layout
     bindsym $mod+w layout tabbed
     bindsym $mod+Shift+w layout stacking
     bindsym $mod+t layout toggle split
 
-    # Make the current focus fullscreen
     bindsym $mod+f fullscreen
 
     # Make the current focus sticky
@@ -162,14 +136,14 @@ client.unfocused "#333333" "#222222" "#cccccc" "#292d2e" "#222222"
     # Swap focus between the tiling area and the floating area
     bindsym $mod+Shift+space focus mode_toggle
 
-    # Move focus to the parent container
+    # Focus parent container
     bindsym $mod+a focus parent
+
+    # Focus child container
+    bindsym $mod+Shift+a focus child
 #
 # Scratchpad:
 #
-    # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
-
     # Move the currently focused window to the scratchpad
     bindsym $mod+Shift+minus move scratchpad
 
@@ -206,15 +180,9 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
-#
-# Fast application launcher
-#
-bindsym $mod+i exec wofi --show=drun
 
+### Status Bar
 #
-# Status Bar:
-#
-# Read `man 5 sway-bar` for more information about this section.
 bar {
     position top
     swaybar_command waybar
@@ -231,7 +199,6 @@ for_window [app_id="terminal_scratchpad"] move scratchpad, move position center
 # Other window rules
 for_window [app_id="firefox" title="Launch Application"] floating enable
 for_window [class="Steam" title="Friends List"] floating enable
-#for_window [class="jetbrains-studio"] floating enable
 for_window [app_id="org.keepassxc.KeePassXC" title="KeePassXC - Browser Access Request"] floating enable
 
 # Start touchpad gestures
