--- a/sway/config
+++ b/sway/config
@@ -11,10 +11,6 @@ set $term kitty
 
 set $menu bemenu-run | xargs swaymsg exec --
 
-### Output configuration
-#
-output * bg ~/pics/wallpapers/selected fill
-
 ### Idle configuration
 #
 # Example configuration:
@@ -32,10 +28,6 @@ output * bg ~/pics/wallpapers/selected fill
 
 ### Input configuration
 #
-input "1267:12363:MSFT0002:01_04F3:304B_Touchpad" {
-    tap enabled
-    middle_emulation enabled
-}
 input "1133:49970:Logitech_Gaming_Mouse_G502" {
     accel_profile flat
 }
@@ -201,5 +193,4 @@ for_window [app_id="firefox" title="Launch Application"] floating enable
 for_window [class="Steam" title="Friends List"] floating enable
 for_window [app_id="org.keepassxc.KeePassXC" title="KeePassXC - Browser Access Request"] floating enable
 
-# Start touchpad gestures
-exec libinput-gestures-setup start
+include config.device
