--- a/dot_config/nvim/coc-settings.json
+++ b/dot_config/nvim/coc-settings.json
@@ -23,6 +23,8 @@
         }
     },
     "rust-analyzer.server.path": "/usr/bin/rust-analyzer",
+    "rust-analyzer.cargo.loadOutDirsFromCheck": true,
+    "rust-analyzer.procMacro.enable": true,
     "tsserver.log": "verbose",
     "tsserver.trace.server": "verbose",
     "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true
