--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -7,30 +7,84 @@ remember_window_size no
 initial_window_width 1000
 initial_window_height 700
 
-background  #282828
-foreground  #ebdbb2
+# ====================
+# gruvbox-material
+# ====================
+background #1d2021
+foreground #d4be98
 
-# black
-color0  #282828
-color8  #928374
-# red
-color1  #cc241d
-color9  #fb4934
-# green
-color2  #98971a
-color10 #b8bb26
-# yellow
-color3  #d79921
-color11 #fabd2d
-# blue
-color4  #458588
-color12 #83a598
-# magenta
-color5  #b16286
+selection_background #d4be98
+selection_foreground #1d2021
+
+cursor #a89984
+cursor_text_color background
+
+active_tab_background #1d2021
+active_tab_foreground #d4be98
+active_tab_font_style bold
+inactive_tab_background #1d2021
+inactive_tab_foreground #a89984
+inactive_tab_font_style normal
+
+# Black
+color0 #665c54
+color8 #928374
+
+# Red
+color1 #ea6962
+color9 #ea6962
+
+# Green
+color2 #a9b665
+color10 #a9b665
+
+# Yellow
+color3 #e78a4e
+color11 #d8a657
+
+# Blue
+color4 #7daea3
+color12 #7daea3
+
+# Magenta
+color5 #d3869b
 color13 #d3869b
-# cyan
-color6  #689d6a
-color14 #8ec07c
-# white
-color7  #a89984
-color15 #928374
+
+# Cyan
+color6 #89b482
+color14 #89b482
+
+# White
+color7 #d4be98
+color15 #d4be98
+
+# ====================
+# gruvbox
+# ====================
+# background  #282828
+# foreground  #ebdbb2
+# 
+# # black
+# color0  #282828
+# color8  #928374
+# # red
+# color1  #cc241d
+# color9  #fb4934
+# # green
+# color2  #98971a
+# color10 #b8bb26
+# # yellow
+# color3  #d79921
+# color11 #fabd2d
+# # blue
+# color4  #458588
+# color12 #83a598
+# # magenta
+# color5  #b16286
+# color13 #d3869b
+# # cyan
+# color6  #689d6a
+# color14 #8ec07c
+# # white
+# color7  #a89984
+# color15 #928374
