Switch to dotter

--- a/fonts.conf
+++ b/fonts.conf
@@ -8,4 +8,10 @@
             <family>Fira Code</family>
         </prefer>
     </alias>
+    <alias>
+        <family>sans</family>
+        <prefer>
+            <family>Quicksand</family>
+        </prefer>
+    </alias>
 </fontconfig>
