--- a/apps/kitty.conf
+++ b/apps/kitty.conf
@@ -9,53 +9,53 @@ initial_window_height 700
 # ====================
 # gruvbox-material
 # ====================
-background #1d2021
-foreground #d4be98
+background #{{colors.background}}
+foreground #{{colors.foreground}}
 
-selection_background #d4be98
-selection_foreground #1d2021
+selection_background #{{colors.foreground}}
+selection_foreground #{{colors.foreground}}
 
-cursor #a89984
+cursor #{{colors.cursor}}
 cursor_text_color background
 
-active_tab_background #1d2021
-active_tab_foreground #d4be98
+active_tab_background #{{colors.background}}
+active_tab_foreground #{{colors.foreground}}
 active_tab_font_style bold
-inactive_tab_background #1d2021
-inactive_tab_foreground #a89984
+inactive_tab_background #{{colors.background}}
+inactive_tab_foreground #{{colors.gray}}
 inactive_tab_font_style normal
 
 # Black
-color0 #665c54
-color8 #928374
+color0 #{{colors.black}}
+color8 #{{colors.gray}}
 
 # Red
-color1 #ea6962
-color9 #ea6962
+color1 #{{colors.red}}
+color9 #{{colors.red}}
 
 # Green
-color2 #a9b665
-color10 #a9b665
+color2 #{{colors.green}}
+color10 #{{colors.green}}
 
 # Yellow
-color3 #e78a4e
-color11 #d8a657
+color3 #{{colors.orange}}
+color11 #{{colors.yellow}}
 
 # Blue
-color4 #7daea3
-color12 #7daea3
+color4 #{{colors.blue}}
+color12 #{{colors.blue}}
 
 # Magenta
-color5 #d3869b
-color13 #d3869b
+color5 #{{colors.purple}}
+color13 #{{colors.purple}}
 
 # Cyan
-color6 #89b482
-color14 #89b482
+color6 #{{colors.cyan}}
+color14 #{{colors.cyan}}
 
 # White
-color7 #d4be98
-color15 #d4be98
+color7 #{{colors.white}}
+color15 #{{colors.white}}
 
 # ====================
 # gruvbox
