--- a/sway/sway/config
+++ b/sway/sway/config
@@ -259,15 +259,24 @@ workspace 1 output $primary
 workspace 2 output $primary
 workspace 3 output $primary
 workspace 4 output $primary
-workspace 5 output $secondary
-workspace 6 output $secondary
-workspace 7 output $secondary
-workspace 8 output $secondary
+workspace 5 output $primary
+workspace 6 output $primary
+workspace 7 output $primary
+workspace 8 output $primary
 workspace 9 output $primary
+workspace 11 output $secondary
+workspace 12 output $secondary
+workspace 13 output $secondary
+workspace 14 output $secondary
+workspace 15 output $secondary
+workspace 16 output $secondary
+workspace 17 output $secondary
+workspace 18 output $secondary
+workspace 19 output $secondary
 
 bindsym --to-code {
-    $mod+n focus output right
-    $mod+Shift+n move container to output right, focus output right
+    $mod+n exec swayextmsg focus_next_output
+    $mod+Shift+n exec swayextmsg move_container_to_next_output
 }
 
 {{else}}{{#if (eq device "laptop") ~}}
