--- a/sway/sway/config
+++ b/sway/sway/config
@@ -170,7 +170,7 @@ bindsym --to-code {
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
     $mod+Return [app_id="terminal_scratchpad"] \
-        scratchpad show, resize set 1920 px 100 ppt, move position center
+        scratchpad show, resize set 100 ppt 100 ppt, move position center
 
     #
     # Function Keys
@@ -238,7 +238,7 @@ include /etc/sway/config.d/*
 ### Startup
 #
 # Start a terminal scratchpad
-exec_always $scratchpad
+exec $scratchpad
 for_window [app_id="terminal_scratchpad"] move scratchpad
 
 # Other window rules
@@ -278,11 +278,12 @@ workspace 19 output $secondary
 
 output $primary {
     resolution 1920x1080@144Hz
-    position 0 0
+    position 0 700
     background ~/pics/wallpapers/primary fill
 }
 output $secondary {
     position 1920 0
+    transform 270
     background ~/pics/wallpapers/secondary fill
 }
 
