kitty: add show_scrollback keybinding

--- a/apps/kitty.conf
+++ b/apps/kitty.conf
@@ -6,6 +6,8 @@ remember_window_size no
 initial_window_width 1000
 initial_window_height 700
 
+map ctrl+shift+h show_scrollback
+
 # ====================
 # gruvbox-material
 # ====================
