--- a/sway/sway/config
+++ b/sway/sway/config
@@ -28,6 +28,9 @@ exec swayidle -w \
     resume 'swaymsg "output * dpms on"' \
     before-sleep 'lockscreen'
 
+### Autostart
+#
+exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 ### Input configuration
 #
