colors: use brighter white

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -24,7 +24,7 @@ yellow     = "d8a657"
 blue       = "7daea3"
 purple     = "d3869b"
 cyan       = "89b482"
-white      = "d4be98"
+white      = "ffffff"
 gray       = "928374"
 
 
