--- a/sway/sway/config
+++ b/sway/sway/config
@@ -172,9 +172,7 @@ bindsym --to-code {
 
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
-    $mod+Return [app_id="terminal_scratchpad"] \
-        scratchpad show, resize set 100 ppt 100 ppt, move position center
-
+    $mod+Return exec swayextmsg toggle_terminal_scratchpad
     #
     # Function Keys
     #
