--- a/apps/kitty.conf
+++ b/apps/kitty.conf
@@ -7,6 +7,8 @@ initial_window_width 1000
 initial_window_height 700
 
 map ctrl+shift+h show_scrollback
+map ctrl+shift+[ previous_tab
+map ctrl+shift+] next_tab
 
 # ====================
 # gruvbox-material
